# code-jam-10

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
cj10-screaming-snakecases/Engine/: ChallengeGen.py  ImageProcesser.py  ImageSteganography  ImageTools.py  ImageViewer.py
cj10-screaming-snakecases/Engine/editor/: blendmodes.py
cj10-screaming-snakecases/Engine/test/tool/: magnifier.py  metadata.py
cj10-screaming-snakecases/GUI/: main.py
pixelheist/: __main__.py  docs.md
pixelheist/Engine/: ChallengeGen.py  ImageViewer.py  __init__.py  editor.py  layers.py  tools.py
pixelheist/Engine/editor/: ImageTools.py  ImageViewer.py  __init__.py  blendmodes.py  editor.py  layer.py  layers.py  tools.py
pixelheist/Engine/steganography/: ImageSteganography.py  ImageTools.py  ImageViewer.py
pixelheist/Engine/test/tool/: denoisingautoenc.py  imageshiftrev.py  magnifier.py  metadata.py
pixelheist/GUI/: main.py  window.py
pixelheist/PuzzleGenerator/: ChalGenv2.py  ChallengeGen.py  levels.json  loader.py
